; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/bsnmp/snmpd/extr_trans_udp.c_udp_close_port.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/bsnmp/snmpd/extr_trans_udp.c_udp_close_port.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tport = type { i32 }
%struct.udp_port = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.tport*)* @udp_close_port to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @udp_close_port(%struct.tport* %0) #0 {
  %2 = alloca %struct.tport*, align 8
  %3 = alloca %struct.udp_port*, align 8
  store %struct.tport* %0, %struct.tport** %2, align 8
  %4 = load %struct.tport*, %struct.tport** %2, align 8
  %5 = bitcast %struct.tport* %4 to %struct.udp_port*
  store %struct.udp_port* %5, %struct.udp_port** %3, align 8
  %6 = load %struct.udp_port*, %struct.udp_port** %3, align 8
  %7 = getelementptr inbounds %struct.udp_port, %struct.udp_port* %6, i32 0, i32 0
  %8 = call i32 @snmpd_input_close(i32* %7)
  %9 = load %struct.tport*, %struct.tport** %2, align 8
  %10 = call i32 @trans_remove_port(%struct.tport* %9)
  %11 = load %struct.udp_port*, %struct.udp_port** %3, align 8
  %12 = call i32 @free(%struct.udp_port* %11)
  ret void
}

declare dso_local i32 @snmpd_input_close(i32*) #1

declare dso_local i32 @trans_remove_port(%struct.tport*) #1

declare dso_local i32 @free(%struct.udp_port*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
